# nextjs-fastapi-postgres-starter

./: README.md
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5dc4e3905c74_initial_migration.py
backend/api/v1/views/: crud.py  messages.py  schemas.py  threads.py  users.py
backend/db/: db.py
backend/models/: message.py  thread.py  user.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: ChatList.jsx  Chatbox.jsx  MessageList.jsx  UserNameModal.jsx  UserSelector.jsx
