[tool.poetry]
name = "backend"
package-mode = false

version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7"
fastapi = "*"
sqlalchemy = "*"
asyncpg = "*"
greenlet = "*"
psycopg2 = "*"
uvicorn = "*"
alembic = "*"
ruff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
